test/files/pos/byname-implicits-1.scala
trait Foo
object Foo {
  implicit def foo(implicit rec: => Foo): Foo = ???
}

object Test {
  implicitly[Foo]
}
